services/monitoring-stack/alertmanager/middleware-oauth2-proxy.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: oauth2-proxy-alertmanager
  namespace: monitoring
spec:
  forwardAuth:
    address: http://oauth2-proxy-alertmanager.monitoring.svc.cluster.local:4180/oauth2/auth
    trustForwardHeader: true
    authResponseHeaders:
      - X-Auth-Request-User
      - X-Auth-Request-Email
      - X-Auth-Request-Groups
